[tool.poetry]
name = "utfuzz"
version = "0.1.10"
description = ""
authors = ["Vyacheslav Tamarin <slavabarsuk@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
install-jdk = "^1.1.0"
tqdm = "^4.66.1"

[tool.poetry.scripts]
utfuzz = "utfuzz.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
